# mcts_solver

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  WORKSPACE  testTicTacToe.cpp  testTree.cpp  test_solver.cpp
.github/workflows/: ccpp.yml
games/: 2048.cpp  2048.h  CMakeLists.txt  GameTicTacToe.h  Readme.md  play2048.cpp  solve2048.cpp  test2048.cpp
games/2048/: 2048.cpp  2048.h  BUILD  CMakeLists.txt  board.cpp  board.h  play_2048.cpp  policies.cpp  policies.h  solve_2048.cpp  test_2048.cpp
games/tic_tac_toe/: BUILD  CMakeLists.txt  play_tic_tac_toe.cpp  solve_tic_tac_toe.cpp  test_tic_tac_toe.cpp  tic_tac_toe.h
mcts/: BUILD  node_statistic.h  problem.h  solver.h  state.h  tree.h  tree_export.h  types.h
mcts/details/: problem_impl.h  solver_impl.h
mcts/rollout/: random_rollout.h  rollout.h
mcts/selection/: selection.h  ucb1.h
mcts/utils/: max_size_vector.h  named_type.h
test/: BUILD  test_solver.cpp  test_tree.cpp
